--- a/package.json
+++ b/package.json
@@ -14,8 +14,24 @@
     "watch": "^1.0.2"
   },
   "devDependencies": {},
+  "config": {
+    "app_dir":  "src",
+    "s3_bucket":  "mr-coffee-ruby",
+    "stack_name":  "mr-coffee-ruby-lambda",
+    "region":  "us-east-1",
+    "stage":  "Development",
+    "api_url":  ""
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ruby src/tests/unit/*.rb",
+    "aws:s3:create": "aws s3 mb s3://$npm_package_config_s3_bucket --region $npm_package_config_region",
+    "aws:s3:destroy": "aws s3 rb s3://$npm_package_config_s3_bucket --force --region $npm_package_config_region",
+    "aws:sam:build": "cd $npm_package_config_app_dir; sam build",
+    "aws:sam:package": "sam package --template-file $npm_package_config_app_dir/.aws-sam/build/template.yaml --s3-bucket $npm_package_config_s3_bucket --output-template-file $npm_package_config_app_dir/.aws-sam/packaged.yaml",
+    "aws:sam:deploy": "sam deploy --template-file $npm_package_config_app_dir/.aws-sam/packaged.yaml --stack-name $npm_package_config_stack_name --capabilities CAPABILITY_NAMED_IAM  --parameter-overrides Stage=$npm_package_config_stage ApiUrl=$npm_package_config_api_url --region $npm_package_config_region",
+    "aws:sam:describe": "aws --region $npm_package_config_region cloudformation describe-stacks --stack-name $npm_package_config_stack_name",
+    "aws:sam:release": "npm-run-all test aws:sam:build aws:sam:package aws:sam:deploy aws:sam:describe",
+    "aws:sam:destroy": "aws --region $npm_package_config_region cloudformation delete-stack --stack-name $npm_package_config_stack_name"
   },
   "repository": {
     "type": "git",
