chore: Sinatraアプリケーションのセットアップ

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "api_url":  ""
   },
   "scripts": {
-    "test": "ruby src/tests/unit/*.rb",
+    "test": "cd $npm_package_config_app_dir; bundle exec rspec",
     "aws:s3:create": "aws s3 mb s3://$npm_package_config_s3_bucket --region $npm_package_config_region",
     "aws:s3:destroy": "aws s3 rb s3://$npm_package_config_s3_bucket --force --region $npm_package_config_region",
     "aws:sam:build": "cd $npm_package_config_app_dir; sam build",
