chore: コードフォーマットタスク追加

--- a/package.json
+++ b/package.json
@@ -3,35 +3,37 @@
   "version": "1.0.0",
   "description": "",
   "main": "",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "browser-sync": "^2.26.5",
     "connect-browser-sync": "^2.1.0",
     "cpx": "^1.5.0",
     "foreman": "^3.0.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.17.0",
     "rimraf": "^2.6.3",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "@prettier/plugin-ruby": "^0.12.2",
+    "prettier": "^1.17.0"
   },
-  "devDependencies": {},
   "config": {
-    "app_dir":  "src",
-    "s3_bucket":  "mr-coffee-ruby",
-    "stack_name":  "mr-coffee-ruby-lambda",
-    "region":  "us-east-1",
-    "stage":  "Development",
-    "api_url":  ""
+    "app_dir": "src",
+    "s3_bucket": "mr-coffee-ruby",
+    "stack_name": "mr-coffee-ruby-lambda",
+    "region": "us-east-1",
+    "stage": "Development",
+    "api_url": ""
   },
   "scripts": {
     "start": "nf start -j Procfile",
     "build": "cd $npm_package_config_app_dir; bundle install",
     "test": "cd $npm_package_config_app_dir; bundle exec rspec",
+    "format": "cd $npm_package_config_app_dir; prettier --prefer-single-quotes false --write 'app/**/*.rb'",
     "watch": "npm-run-all watch:*",
-    "watch:app": "watch 'npm-run-all test' ./src/app",
-    "watch:test": "watch 'npm-run-all test' ./src/app/spec",
+    "watch:app": "watch 'npm-run-all test format' ./src/app",
+    "watch:test": "watch 'npm-run-all test format' ./src/app/spec",
     "app:front": "browser-sync start --config bs-config.js",
     "app:server": "cd $npm_package_config_app_dir; bundle exec rackup app/config.ru",
-    "app:api" : "cd $npm_package_config_app_dir; sam local start-api --host 0.0.0.0 --port 4000 --template .aws-sam/build/template.yaml",
+    "app:api": "cd $npm_package_config_app_dir; sam local start-api --host 0.0.0.0 --port 4000 --template .aws-sam/build/template.yaml",
     "aws:s3:create": "aws s3 mb s3://$npm_package_config_s3_bucket --region $npm_package_config_region",
     "aws:s3:destroy": "aws s3 rb s3://$npm_package_config_s3_bucket --force --region $npm_package_config_region",
     "aws:sam:build": "cd $npm_package_config_app_dir; sam build",
