chore: Linterタスク追加

--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "build": "cd $npm_package_config_app_dir; bundle install",
     "test": "cd $npm_package_config_app_dir; bundle exec rspec",
     "format": "cd $npm_package_config_app_dir; prettier --prefer-single-quotes false --write 'app/**/*.rb'",
+    "linter": "cd $npm_package_config_app_dir; bundle exec rubocop",
+    "linter:config": "cd $npm_package_config_app_dir; bundle exec rubocop --auto-gen-config",
+    "linter:fix": "cd $npm_package_config_app_dir; bundle exec rubocop --auto-correct",
     "watch": "npm-run-all watch:*",
-    "watch:app": "watch 'npm-run-all test format' ./src/app",
-    "watch:test": "watch 'npm-run-all test format' ./src/app/spec",
+    "watch:app": "watch 'npm-run-all test format linter' ./src/app",
+    "watch:test": "watch 'npm-run-all test format linter' ./src/app/spec",
     "app:front": "browser-sync start --config bs-config.js",
     "app:server": "cd $npm_package_config_app_dir; bundle exec rackup app/config.ru",
     "app:api": "cd $npm_package_config_app_dir; sam local start-api --host 0.0.0.0 --port 4000 --template .aws-sam/build/template.yaml",
