test: 受け入れテスト作成

--- a/package.json
+++ b/package.json
@@ -26,16 +26,17 @@
   "scripts": {
     "start": "nf start -j Procfile",
     "build": "npm-run-all app:build aws:sam:build",
-    "test": "npm-run-all test:*",
+    "test": "npm-run-all test:spec test:feature:headless",
     "test:spec": "cd $npm_package_config_app_dir; bundle exec rspec",
-    "test:feature": "cd $npm_package_config_app_dir; bundle exec cucumber",
+    "test:feature:headless": "cd $npm_package_config_app_dir; bundle exec cucumber",
+    "test:feature:brower": "cd $npm_package_config_app_dir; BROWSER=true bundle exec cucumber",
     "format": "cd $npm_package_config_app_dir; prettier --prefer-single-quotes false --write 'app/**/*.rb'",
     "linter": "cd $npm_package_config_app_dir; bundle exec rubocop",
     "linter:config": "cd $npm_package_config_app_dir; bundle exec rubocop --auto-gen-config",
     "linter:fix": "cd $npm_package_config_app_dir; bundle exec rubocop --auto-correct",
     "watch": "npm-run-all watch:*",
-    "watch:app": "watch 'npm-run-all test format linter' $npm_package_config_app_dir/app",
-    "watch:test": "watch 'npm-run-all test format linter' $npm_package_config_app_dir/app/spec",
+    "watch:app": "watch 'npm-run-all test format linter:fix' $npm_package_config_app_dir/app",
+    "watch:test": "watch 'npm-run-all test format linter:fix' $npm_package_config_app_dir/app/spec",
     "app:build": "cd $npm_package_config_app_dir; bundle install",
     "app:front": "browser-sync start --config bs-config.js",
     "app:server": "cd $npm_package_config_app_dir; bundle exec rackup app/config.ru",
