--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "stack_name": "mr-coffee-ruby-lambda",
     "region": "us-east-1",
     "stage": "Development",
-    "api_url": ""
+    "api_url": "",
+    "local_network": "lambda-local",
+    "local_db": "dynamodb"
   },
   "scripts": {
     "start": "nf start -j Procfile",
@@ -41,6 +43,16 @@
     "app:front": "browser-sync start --config bs-config.js",
     "app:server": "cd $npm_package_config_app_dir; bundle exec rackup app/config.ru",
     "app:api": "cd $npm_package_config_app_dir; sam local start-api --host 0.0.0.0 --port 4000 --template .aws-sam/build/template.yaml",
+    "db:setup": "npm-run-all db:setup:*",
+    "db:setup:network": "docker network create $npm_package_config_local_network",
+    "db:setup:db": "docker run -d -v $PWD:/dynamodb_local_db -p 8000:8000 --network $npm_package_config_local_network --name $npm_package_config_local_db instructure/dynamo-local-admin",
+    "db:destroy": "npm-run-all db:destroy:db db:destroy:network",
+    "db:destroy:network": "docker network rm $npm_package_config_local_network",
+    "db:destroy:db": "docker rm -f $npm_package_config_local_db",
+    "db:start": "docker start $npm_package_config_local_db",
+    "db:stop": "docker stop $npm_package_config_local_db",
+    "db:show": "open http://127.0.0.1:8000",
+    "db:restart": "npm-run-all db:stop db:start",
     "aws:s3:create": "aws s3 mb s3://$npm_package_config_s3_bucket --region $npm_package_config_region",
     "aws:s3:destroy": "aws s3 rb s3://$npm_package_config_s3_bucket --force --region $npm_package_config_region",
     "aws:sam:build": "cd $npm_package_config_app_dir; sam build",
