--- a/app/Gemfile
+++ b/app/Gemfile
@@ -2,11 +2,15 @@
 
 source 'https://rubygems.org'
 
+gem 'activerecord', '~> 4.2', '>= 4.2.6', require: 'active_record'
 gem 'aws-record'
 gem 'json'
+gem 'puma'
 gem 'rack'
 gem 'rack-contrib'
 gem 'rake'
+gem 'require_all'
 gem 'rubysl-base64'
 gem 'sinatra'
+gem 'sinatra-activerecord', require: 'sinatra/activerecord'
 gem 'sinatra-contrib', require: false
