--- a/app/Gemfile
+++ b/app/Gemfile
@@ -15,3 +15,4 @@ gem 'sinatra'
 gem 'sinatra-activerecord', require: 'sinatra/activerecord'
 gem 'sinatra-contrib', require: false
 gem "sinatra-cross_origin", "~> 0.3.1"
+gem 'faker', :git => 'https://github.com/stympy/faker.git', :branch => 'master'
