--- a/app/Gemfile
+++ b/app/Gemfile
@@ -4,6 +4,7 @@ source 'https://rubygems.org'
 
 gem 'activerecord', '~> 4.2', '>= 4.2.6', require: 'active_record'
 gem 'aws-record'
+gem 'faker', git: 'https://github.com/stympy/faker.git', branch: 'master'
 gem 'json'
 gem 'puma'
 gem 'rack'
@@ -14,5 +15,4 @@ gem 'rubysl-base64'
 gem 'sinatra'
 gem 'sinatra-activerecord', require: 'sinatra/activerecord'
 gem 'sinatra-contrib', require: false
-gem "sinatra-cross_origin", "~> 0.3.1"
-gem 'faker', :git => 'https://github.com/stympy/faker.git', :branch => 'master'
+gem 'sinatra-cross_origin', '~> 0.3.1'
