chore: タスク更新

--- a/package.json
+++ b/package.json
@@ -31,18 +31,19 @@
     "clean": "npm-run-all clean:*",
     "clean:tmp": "rimraf ./tmp",
     "build": "npm-run-all app:build aws:sam:build",
-    "test": "npm-run-all test:spec test:feature:headless",
+    "test": "npm-run-all test:spec test:feature:doc",
     "test:spec": "cd $npm_package_config_app_dir; bundle exec rspec",
     "test:feature:headless": "cd $npm_package_config_app_dir; bundle exec cucumber --tags ~@wip",
     "test:feature:brower": "cd $npm_package_config_app_dir; BROWSER=true bundle exec cucumber",
     "test:feature:doc": "cd $npm_package_config_app_dir; bundle exec cucumber --format json -o cucumber.json",
-    "format": "cd $npm_package_config_app_dir; prettier --prefer-single-quotes false --write 'app/**/*.rb'",
+    "format": "cd $npm_package_config_app_dir; prettier --prefer-single-quotes true --write 'app/**/*.rb'",
     "linter": "cd $npm_package_config_app_dir; bundle exec rubocop",
     "linter:config": "cd $npm_package_config_app_dir; bundle exec rubocop --auto-gen-config",
     "linter:fix": "cd $npm_package_config_app_dir; bundle exec rubocop --auto-correct",
-    "watch": "npm-run-all watch:*",
-    "watch:app": "watch 'npm-run-all test format linter:fix' $npm_package_config_app_dir/app",
-    "watch:test": "watch 'npm-run-all test format linter:fix' $npm_package_config_app_dir/app/spec",
+    "watch": "npm-run-all clean:* watch:*",
+    "watch:app": "watch 'npm-run-all test:spec format linter:fix' $npm_package_config_app_dir/app",
+    "watch:test": "watch 'npm-run-all test:spec format linter:fix' $npm_package_config_app_dir/app/spec",
+    "watch:feature": "watch 'npm-run-all doc:feature:*' $npm_package_config_app_dir/features",
     "app:build": "cd $npm_package_config_app_dir; bundle install",
     "app:front": "browser-sync start --config bs-config.js",
     "app:server": "cd $npm_package_config_app_dir; bundle exec shotgun -p 9292 app/config.ru",
